Fix text color on mobile menu (#1446)
* Fix text color on mobile menu

* Fix hover color

--- a/src/layouts/SidebarMenu.scss
+++ b/src/layouts/SidebarMenu.scss
@@ -456,7 +456,13 @@
 
       a {
         padding: 3px 0 3px 30px;
+        color: #c4d7ec !important;
       }
+
+    }
+
+    ul li:hover a {
+      color: #4f6176 !important;
     }
 
     ul li:hover ul {
